# OduduwaLang

./: README.md  RELEASE_NOTES.md  architecture_overview.md.resolved  debug_transpiler_output.py  linkedin_draft.md  out.txt  pyproject.toml  setup.py  test.odu
docs/: grammar.md  native_compilation_research.md
examples/: asise_test.odu  datastructures.odu  error_test.odu  hello.odu  idanwo_titun.odu  idanwo_titun.py  import_test.odu  itan_idanwo.odu  itan_idanwo.py  itan_ikojo.odu  itan_onka.odu  jpj.odu  loops.odu  math.odu  messy.odu  onka_test.odu  oop.odu  ooto.odu  stdlib_test.odu  tutorial.odu
oduduwalang-0.2.1/: setup.py
src/oduduwa/: cli.py  repl.py
src/oduduwa/core/: ast.py  lexer.py  linter.py  parser.py  test_lexer.py  test_transpiler.py  transpiler.py
src/oduduwa/errors/: reporter.py
src/oduduwa/stdlib/: ayelujara.py  iro.py  isiro.py  json_yoruba.py  onka.py
src/oduduwalang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vscode-oduduwa/: language-configuration.json  oduduwa-0.1.0.vsix  package.json
vscode-oduduwa/syntaxes/: oduduwa.tmLanguage.json
