[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oduduwalang"
version = "0.2.2"
authors = [
  { name="Oduduwa Developer", email="adediranadedamolagoodness@gmail.com" },
]
description = "A Yoruba-first programming language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/goodyness/OduduwaLang"
"Bug Tracker" = "https://github.com/goodyness/OduduwaLang/issues"

[project.scripts]
oduduwa = "oduduwa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
